; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcpred_msa.c_hevc_intra_pred_angular_upper_32width_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcpred_msa.c_hevc_intra_pred_angular_upper_32width_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.hevc_intra_pred_angular_upper_32width_msa.inv_angle = private unnamed_addr constant [8 x i32] [i32 -256, i32 -315, i32 -390, i32 -482, i32 -630, i32 -910, i32 -1638, i32 -4096], align 16
@intra_pred_angle_up = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32, i32)* @hevc_intra_pred_angular_upper_32width_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_intra_pred_angular_upper_32width_msa(i32* %0, i32* %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca [8 x i32], align 16
  %12 = alloca [100 x i32], align 16
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  %32 = alloca i32, align 4
  %33 = alloca i32, align 4
  %34 = alloca i32, align 4
  %35 = alloca i32, align 4
  %36 = alloca i32, align 4
  %37 = alloca i32, align 4
  %38 = alloca i32, align 4
  %39 = alloca i32, align 4
  %40 = alloca i32, align 4
  %41 = alloca i32, align 4
  %42 = alloca i32, align 4
  %43 = alloca i32, align 4
  %44 = alloca i32, align 4
  %45 = alloca i32, align 4
  %46 = alloca i32, align 4
  %47 = alloca i32, align 4
  %48 = alloca i32, align 4
  %49 = alloca i32, align 4
  %50 = alloca i32, align 4
  %51 = alloca i32, align 4
  %52 = alloca i32, align 4
  %53 = alloca i32, align 4
  %54 = alloca i32, align 4
  %55 = alloca i32, align 4
  %56 = alloca i32, align 4
  %57 = alloca i32, align 4
  %58 = alloca i32, align 4
  %59 = alloca i32, align 4
  %60 = alloca i32, align 4
  %61 = alloca i32, align 4
  %62 = alloca i32, align 4
  %63 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %64 = bitcast [8 x i32]* %11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %64, i8* align 16 bitcast ([8 x i32]* @__const.hevc_intra_pred_angular_upper_32width_msa.inv_angle to i8*), i64 32, i1 false)
  %65 = load i32*, i32** %7, align 8
  %66 = getelementptr inbounds i32, i32* %65, i64 -1
  store i32* %66, i32** %15, align 8
  %67 = getelementptr inbounds [100 x i32], [100 x i32]* %12, i64 0, i64 0
  %68 = getelementptr inbounds i32, i32* %67, i64 32
  store i32* %68, i32** %13, align 8
  %69 = load i32*, i32** @intra_pred_angle_up, align 8
  %70 = load i32, i32* %10, align 4
  %71 = sub nsw i32 %70, 18
  %72 = sext i32 %71 to i64
  %73 = getelementptr inbounds i32, i32* %69, i64 %72
  %74 = load i32, i32* %73, align 4
  store i32 %74, i32* %26, align 4
  %75 = load i32, i32* %10, align 4
  %76 = sub nsw i32 %75, 18
  %77 = sext i32 %76 to i64
  %78 = getelementptr inbounds [8 x i32], [8 x i32]* %11, i64 0, i64 %77
  %79 = load i32, i32* %78, align 4
  store i32 %79, i32* %28, align 4
  %80 = load i32, i32* %26, align 4
  store i32 %80, i32* %30, align 4
  %81 = load i32, i32* %26, align 4
  store i32 %81, i32* %27, align 4
  %82 = load i32*, i32** %6, align 8
  %83 = getelementptr inbounds i32, i32* %82, i64 -1
  store i32* %83, i32** %14, align 8
  %84 = load i32, i32* %30, align 4
  %85 = icmp slt i32 %84, -1
  br i1 %85, label %86, label %147

86:                                               ; preds = %5
  %87 = load i32, i32* %28, align 4
  %88 = load i32, i32* %30, align 4
  %89 = mul nsw i32 %87, %88
  store i32 %89, i32* %29, align 4
  %90 = load i32*, i32** %14, align 8
  %91 = load i32, i32* %32, align 4
  %92 = load i32, i32* %33, align 4
  %93 = call i32 @LD_UB2(i32* %90, i32 16, i32 %91, i32 %92)
  %94 = load i32*, i32** %14, align 8
  %95 = getelementptr inbounds i32, i32* %94, i64 32
  %96 = load i32, i32* %95, align 4
  store i32 %96, i32* %22, align 4
  %97 = load i32*, i32** %14, align 8
  %98 = getelementptr inbounds i32, i32* %97, i64 33
  %99 = load i32, i32* %98, align 4
  store i32 %99, i32* %23, align 4
  %100 = load i32*, i32** %14, align 8
  %101 = getelementptr inbounds i32, i32* %100, i64 34
  %102 = load i32, i32* %101, align 4
  store i32 %102, i32* %24, align 4
  %103 = load i32*, i32** %14, align 8
  %104 = getelementptr inbounds i32, i32* %103, i64 35
  %105 = load i32, i32* %104, align 4
  store i32 %105, i32* %25, align 4
  %106 = load i32, i32* %32, align 4
  %107 = load i32, i32* %33, align 4
  %108 = load i32*, i32** %13, align 8
  %109 = call i32 @ST_UB2(i32 %106, i32 %107, i32* %108, i32 16)
  %110 = load i32, i32* %22, align 4
  %111 = load i32*, i32** %13, align 8
  %112 = getelementptr inbounds i32, i32* %111, i64 32
  store i32 %110, i32* %112, align 4
  %113 = load i32, i32* %23, align 4
  %114 = load i32*, i32** %13, align 8
  %115 = getelementptr inbounds i32, i32* %114, i64 33
  store i32 %113, i32* %115, align 4
  %116 = load i32, i32* %24, align 4
  %117 = load i32*, i32** %13, align 8
  %118 = getelementptr inbounds i32, i32* %117, i64 34
  store i32 %116, i32* %118, align 4
  %119 = load i32, i32* %25, align 4
  %120 = load i32*, i32** %13, align 8
  %121 = getelementptr inbounds i32, i32* %120, i64 35
  store i32 %119, i32* %121, align 4
  %122 = load i32, i32* %30, align 4
  store i32 %122, i32* %16, align 4
  br label %123

123:                                              ; preds = %142, %86
  %124 = load i32, i32* %16, align 4
  %125 = icmp sle i32 %124, -1
  br i1 %125, label %126, label %145

126:                                              ; preds = %123
  %127 = load i32, i32* %29, align 4
  %128 = add nsw i32 %127, 128
  %129 = ashr i32 %128, 8
  store i32 %129, i32* %31, align 4
  %130 = load i32*, i32** %15, align 8
  %131 = load i32, i32* %31, align 4
  %132 = sext i32 %131 to i64
  %133 = getelementptr inbounds i32, i32* %130, i64 %132
  %134 = load i32, i32* %133, align 4
  %135 = load i32*, i32** %13, align 8
  %136 = load i32, i32* %16, align 4
  %137 = sext i32 %136 to i64
  %138 = getelementptr inbounds i32, i32* %135, i64 %137
  store i32 %134, i32* %138, align 4
  %139 = load i32, i32* %28, align 4
  %140 = load i32, i32* %29, align 4
  %141 = add nsw i32 %140, %139
  store i32 %141, i32* %29, align 4
  br label %142

142:                                              ; preds = %126
  %143 = load i32, i32* %16, align 4
  %144 = add nsw i32 %143, 1
  store i32 %144, i32* %16, align 4
  br label %123

145:                                              ; preds = %123
  %146 = load i32*, i32** %13, align 8
  store i32* %146, i32** %14, align 8
  br label %147

147:                                              ; preds = %145, %5
  store i32 16, i32* %17, align 4
  br label %148

148:                                              ; preds = %152, %147
  %149 = load i32, i32* %17, align 4
  %150 = add nsw i32 %149, -1
  store i32 %150, i32* %17, align 4
  %151 = icmp ne i32 %149, 0
  br i1 %151, label %152, label %365

152:                                              ; preds = %148
  %153 = load i32, i32* %27, align 4
  %154 = ashr i32 %153, 5
  store i32 %154, i32* %18, align 4
  %155 = load i32, i32* %27, align 4
  %156 = and i32 %155, 31
  store i32 %156, i32* %19, align 4
  %157 = load i32, i32* %26, align 4
  %158 = load i32, i32* %27, align 4
  %159 = add nsw i32 %158, %157
  store i32 %159, i32* %27, align 4
  %160 = load i32, i32* %27, align 4
  %161 = ashr i32 %160, 5
  store i32 %161, i32* %20, align 4
  %162 = load i32, i32* %27, align 4
  %163 = and i32 %162, 31
  store i32 %163, i32* %21, align 4
  %164 = load i32, i32* %26, align 4
  %165 = load i32, i32* %27, align 4
  %166 = add nsw i32 %165, %164
  store i32 %166, i32* %27, align 4
  %167 = load i32*, i32** %14, align 8
  %168 = load i32, i32* %18, align 4
  %169 = sext i32 %168 to i64
  %170 = getelementptr inbounds i32, i32* %167, i64 %169
  %171 = getelementptr inbounds i32, i32* %170, i64 1
  %172 = call i32 @LD_UB(i32* %171)
  store i32 %172, i32* %32, align 4
  %173 = load i32*, i32** %14, align 8
  %174 = load i32, i32* %20, align 4
  %175 = sext i32 %174 to i64
  %176 = getelementptr inbounds i32, i32* %173, i64 %175
  %177 = getelementptr inbounds i32, i32* %176, i64 1
  %178 = call i32 @LD_UB(i32* %177)
  store i32 %178, i32* %36, align 4
  %179 = load i32*, i32** %14, align 8
  %180 = load i32, i32* %18, align 4
  %181 = sext i32 %180 to i64
  %182 = getelementptr inbounds i32, i32* %179, i64 %181
  %183 = getelementptr inbounds i32, i32* %182, i64 17
  %184 = call i32 @LD_UB(i32* %183)
  store i32 %184, i32* %33, align 4
  %185 = load i32*, i32** %14, align 8
  %186 = load i32, i32* %20, align 4
  %187 = sext i32 %186 to i64
  %188 = getelementptr inbounds i32, i32* %185, i64 %187
  %189 = getelementptr inbounds i32, i32* %188, i64 17
  %190 = call i32 @LD_UB(i32* %189)
  store i32 %190, i32* %37, align 4
  %191 = load i32*, i32** %14, align 8
  %192 = load i32, i32* %18, align 4
  %193 = sext i32 %192 to i64
  %194 = getelementptr inbounds i32, i32* %191, i64 %193
  %195 = getelementptr inbounds i32, i32* %194, i64 33
  %196 = call i32 @LD_UB(i32* %195)
  store i32 %196, i32* %35, align 4
  %197 = load i32*, i32** %14, align 8
  %198 = load i32, i32* %20, align 4
  %199 = sext i32 %198 to i64
  %200 = getelementptr inbounds i32, i32* %197, i64 %199
  %201 = getelementptr inbounds i32, i32* %200, i64 33
  %202 = call i32 @LD_UB(i32* %201)
  store i32 %202, i32* %39, align 4
  %203 = load i32, i32* %19, align 4
  %204 = call i32 @__msa_fill_h(i32 %203)
  store i32 %204, i32* %44, align 4
  %205 = load i32, i32* %19, align 4
  %206 = sub nsw i32 32, %205
  %207 = call i32 @__msa_fill_h(i32 %206)
  store i32 %207, i32* %45, align 4
  %208 = load i32, i32* %21, align 4
  %209 = call i32 @__msa_fill_h(i32 %208)
  store i32 %209, i32* %46, align 4
  %210 = load i32, i32* %21, align 4
  %211 = sub nsw i32 32, %210
  %212 = call i32 @__msa_fill_h(i32 %211)
  store i32 %212, i32* %47, align 4
  %213 = load i32, i32* %33, align 4
  store i32 %213, i32* %34, align 4
  %214 = load i32, i32* %37, align 4
  store i32 %214, i32* %38, align 4
  %215 = load i32, i32* %33, align 4
  %216 = load i32, i32* %32, align 4
  %217 = load i32, i32* %35, align 4
  %218 = load i32, i32* %34, align 4
  %219 = load i32, i32* %37, align 4
  %220 = load i32, i32* %36, align 4
  %221 = load i32, i32* %39, align 4
  %222 = load i32, i32* %38, align 4
  %223 = load i32, i32* %33, align 4
  %224 = load i32, i32* %35, align 4
  %225 = load i32, i32* %37, align 4
  %226 = load i32, i32* %39, align 4
  %227 = call i32 @SLDI_B4_UB(i32 %215, i32 %216, i32 %217, i32 %218, i32 %219, i32 %220, i32 %221, i32 %222, i32 1, i32 %223, i32 %224, i32 %225, i32 %226)
  %228 = load i32, i32* %32, align 4
  %229 = load i32, i32* %48, align 4
  %230 = load i32, i32* %49, align 4
  %231 = call i32 @UNPCK_UB_SH(i32 %228, i32 %229, i32 %230)
  %232 = load i32, i32* %33, align 4
  %233 = load i32, i32* %50, align 4
  %234 = load i32, i32* %51, align 4
  %235 = call i32 @UNPCK_UB_SH(i32 %232, i32 %233, i32 %234)
  %236 = load i32, i32* %34, align 4
  %237 = load i32, i32* %52, align 4
  %238 = load i32, i32* %53, align 4
  %239 = call i32 @UNPCK_UB_SH(i32 %236, i32 %237, i32 %238)
  %240 = load i32, i32* %35, align 4
  %241 = load i32, i32* %54, align 4
  %242 = load i32, i32* %55, align 4
  %243 = call i32 @UNPCK_UB_SH(i32 %240, i32 %241, i32 %242)
  %244 = load i32, i32* %36, align 4
  %245 = load i32, i32* %56, align 4
  %246 = load i32, i32* %57, align 4
  %247 = call i32 @UNPCK_UB_SH(i32 %244, i32 %245, i32 %246)
  %248 = load i32, i32* %37, align 4
  %249 = load i32, i32* %58, align 4
  %250 = load i32, i32* %59, align 4
  %251 = call i32 @UNPCK_UB_SH(i32 %248, i32 %249, i32 %250)
  %252 = load i32, i32* %38, align 4
  %253 = load i32, i32* %60, align 4
  %254 = load i32, i32* %61, align 4
  %255 = call i32 @UNPCK_UB_SH(i32 %252, i32 %253, i32 %254)
  %256 = load i32, i32* %39, align 4
  %257 = load i32, i32* %62, align 4
  %258 = load i32, i32* %63, align 4
  %259 = call i32 @UNPCK_UB_SH(i32 %256, i32 %257, i32 %258)
  %260 = load i32, i32* %50, align 4
  %261 = load i32, i32* %44, align 4
  %262 = load i32, i32* %51, align 4
  %263 = load i32, i32* %44, align 4
  %264 = load i32, i32* %54, align 4
  %265 = load i32, i32* %44, align 4
  %266 = load i32, i32* %55, align 4
  %267 = load i32, i32* %44, align 4
  %268 = load i32, i32* %50, align 4
  %269 = load i32, i32* %51, align 4
  %270 = load i32, i32* %54, align 4
  %271 = load i32, i32* %55, align 4
  %272 = call i32 @MUL4(i32 %260, i32 %261, i32 %262, i32 %263, i32 %264, i32 %265, i32 %266, i32 %267, i32 %268, i32 %269, i32 %270, i32 %271)
  %273 = load i32, i32* %58, align 4
  %274 = load i32, i32* %46, align 4
  %275 = load i32, i32* %59, align 4
  %276 = load i32, i32* %46, align 4
  %277 = load i32, i32* %62, align 4
  %278 = load i32, i32* %46, align 4
  %279 = load i32, i32* %63, align 4
  %280 = load i32, i32* %46, align 4
  %281 = load i32, i32* %58, align 4
  %282 = load i32, i32* %59, align 4
  %283 = load i32, i32* %62, align 4
  %284 = load i32, i32* %63, align 4
  %285 = call i32 @MUL4(i32 %273, i32 %274, i32 %275, i32 %276, i32 %277, i32 %278, i32 %279, i32 %280, i32 %281, i32 %282, i32 %283, i32 %284)
  %286 = load i32, i32* %48, align 4
  %287 = load i32, i32* %45, align 4
  %288 = mul nsw i32 %286, %287
  %289 = load i32, i32* %50, align 4
  %290 = add nsw i32 %289, %288
  store i32 %290, i32* %50, align 4
  %291 = load i32, i32* %49, align 4
  %292 = load i32, i32* %45, align 4
  %293 = mul nsw i32 %291, %292
  %294 = load i32, i32* %51, align 4
  %295 = add nsw i32 %294, %293
  store i32 %295, i32* %51, align 4
  %296 = load i32, i32* %52, align 4
  %297 = load i32, i32* %45, align 4
  %298 = mul nsw i32 %296, %297
  %299 = load i32, i32* %54, align 4
  %300 = add nsw i32 %299, %298
  store i32 %300, i32* %54, align 4
  %301 = load i32, i32* %53, align 4
  %302 = load i32, i32* %45, align 4
  %303 = mul nsw i32 %301, %302
  %304 = load i32, i32* %55, align 4
  %305 = add nsw i32 %304, %303
  store i32 %305, i32* %55, align 4
  %306 = load i32, i32* %56, align 4
  %307 = load i32, i32* %47, align 4
  %308 = mul nsw i32 %306, %307
  %309 = load i32, i32* %58, align 4
  %310 = add nsw i32 %309, %308
  store i32 %310, i32* %58, align 4
  %311 = load i32, i32* %57, align 4
  %312 = load i32, i32* %47, align 4
  %313 = mul nsw i32 %311, %312
  %314 = load i32, i32* %59, align 4
  %315 = add nsw i32 %314, %313
  store i32 %315, i32* %59, align 4
  %316 = load i32, i32* %60, align 4
  %317 = load i32, i32* %47, align 4
  %318 = mul nsw i32 %316, %317
  %319 = load i32, i32* %62, align 4
  %320 = add nsw i32 %319, %318
  store i32 %320, i32* %62, align 4
  %321 = load i32, i32* %61, align 4
  %322 = load i32, i32* %47, align 4
  %323 = mul nsw i32 %321, %322
  %324 = load i32, i32* %63, align 4
  %325 = add nsw i32 %324, %323
  store i32 %325, i32* %63, align 4
  %326 = load i32, i32* %50, align 4
  %327 = load i32, i32* %51, align 4
  %328 = load i32, i32* %54, align 4
  %329 = load i32, i32* %55, align 4
  %330 = call i32 @SRARI_H4_SH(i32 %326, i32 %327, i32 %328, i32 %329, i32 5)
  %331 = load i32, i32* %58, align 4
  %332 = load i32, i32* %59, align 4
  %333 = load i32, i32* %62, align 4
  %334 = load i32, i32* %63, align 4
  %335 = call i32 @SRARI_H4_SH(i32 %331, i32 %332, i32 %333, i32 %334, i32 5)
  %336 = load i32, i32* %51, align 4
  %337 = load i32, i32* %50, align 4
  %338 = load i32, i32* %55, align 4
  %339 = load i32, i32* %54, align 4
  %340 = load i32, i32* %59, align 4
  %341 = load i32, i32* %58, align 4
  %342 = load i32, i32* %63, align 4
  %343 = load i32, i32* %62, align 4
  %344 = load i32, i32* %40, align 4
  %345 = load i32, i32* %41, align 4
  %346 = load i32, i32* %42, align 4
  %347 = load i32, i32* %43, align 4
  %348 = call i32 @PCKEV_B4_SB(i32 %336, i32 %337, i32 %338, i32 %339, i32 %340, i32 %341, i32 %342, i32 %343, i32 %344, i32 %345, i32 %346, i32 %347)
  %349 = load i32, i32* %40, align 4
  %350 = load i32, i32* %41, align 4
  %351 = load i32*, i32** %8, align 8
  %352 = call i32 @ST_SB2(i32 %349, i32 %350, i32* %351, i32 16)
  %353 = load i32, i32* %9, align 4
  %354 = load i32*, i32** %8, align 8
  %355 = sext i32 %353 to i64
  %356 = getelementptr inbounds i32, i32* %354, i64 %355
  store i32* %356, i32** %8, align 8
  %357 = load i32, i32* %42, align 4
  %358 = load i32, i32* %43, align 4
  %359 = load i32*, i32** %8, align 8
  %360 = call i32 @ST_SB2(i32 %357, i32 %358, i32* %359, i32 16)
  %361 = load i32, i32* %9, align 4
  %362 = load i32*, i32** %8, align 8
  %363 = sext i32 %361 to i64
  %364 = getelementptr inbounds i32, i32* %362, i64 %363
  store i32* %364, i32** %8, align 8
  br label %148

365:                                              ; preds = %148
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @LD_UB2(i32*, i32, i32, i32) #2

declare dso_local i32 @ST_UB2(i32, i32, i32*, i32) #2

declare dso_local i32 @LD_UB(i32*) #2

declare dso_local i32 @__msa_fill_h(i32) #2

declare dso_local i32 @SLDI_B4_UB(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @UNPCK_UB_SH(i32, i32, i32) #2

declare dso_local i32 @MUL4(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @SRARI_H4_SH(i32, i32, i32, i32, i32) #2

declare dso_local i32 @PCKEV_B4_SB(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @ST_SB2(i32, i32, i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
